# climate_health_simulations

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: SimulationConfig.py
config/config_variations/: ConfigGenerator.py  ConfigParameters.py
scripts/: generate_dataset_suite.py
simulator/: ClimateData.py  ClimateHealth.py  SimulationEngine.py  Simulator.py  deprecated_Simulator.py  util.py
simulator/diseases/: ClimateAndSeasonDependentDiseaseCases.py  ClimateDependentDiseaseCases.py  CovariateIndependentDiseaseCases.py  DiseaseCases.py  DiseaseCasesGeneratorFactory.py  SeasonDependentDiseaseCases.py  old_DiseaseCases.py
simulator/population/: PopulationGenerator.py  PopulationGeneratorFactory.py  SyntheticPopulationGenerator.py
simulator/rainfall/: RainfallGenerator.py  RainfallGeneratorFactory.py  RealisticRainfallGenerator.py  SyntheticRainfallDependentOnSeasonGenerator.py  SyntheticRainfallGenerator.py
simulator/season/: Season.py  SeasonGenerator.py
simulator/temperature/: RealisticTemperatureGenerator.py  SyntheticTemperatureDependentOnSeasonGenerator.py  SyntheticTemperatureGenerator.py  TemperatureGenerator.py  TemperatureGeneratorFactory.py
src/climate_health_simulations.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/climate_health_simulations/config/: SimulationConfig.py
src/climate_health_simulations/scripts/: generate_dataset_suite.py
tests/config_variations/: test_config_generator.py
tests/simulator/: test_climate_health_plotting.py  test_simulate_realistic_linear_lag3_dependency.py
(+38 files in other folders)
